@@ -32,6 +32,7 @@ const IS_WINDOWS  = !IS_ANDROID && !IS_APPLE && checkPlatform('Win');
 const IS_LINUX    = !IS_ANDROID && !IS_APPLE && !IS_WINDOWS && checkPlatform('Linux');
 
 const SKIP_SECONDS_VALS = [5, 10, 15, 30];
+const LMS_DEFAULT_THEME = 'darker';
 const LMS_BATCH_SIZE = 25000;
 const LMS_QUEUE_BATCH_SIZE = 5000;
 const LMS_MAX_NON_SCROLLER_ITEMS = 100;
